# ArcadeApp

./: CMakeLists.txt  README.md  run.sh
app/: ArcadeApp.cpp  CMakeLists.txt
src/: CMakeLists.txt
src/App/: App.cpp  App.h
src/Graphics/: Color.cpp  Color.h  Screen.cpp  Screen.h  ScreenBuffer.cpp  ScreenBuffer.h
src/Input/: GameController.cpp  GameController.h  InputAction.h
src/Scenes/: ArcadeScene.cpp  ArcadeScene.h  Scene.h
src/Shapes/: AARectangle.cpp  AARectangle.h  Circle.cpp  Circle.h  Line2D.cpp  Line2D.h  Shape.cpp  Shape.h  Triangle.cpp  Triangle.h
src/Utils/: Utils.cpp  Utils.h  Vector2D.cpp  Vector2D.h
